--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,16 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
-# HOST=localhost
-# PORT=3000
+DATABASE_URL="file:./dev.db"
 
 ADMIN_USERNAME=
 HASHED_ADMIN_PASSWORD=
+
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+RESEND_API_KEY=
+SENDER_EMAIL=onboarding@resend.dev
